--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,6 +8,7 @@
   <title>Vidjot</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
+  <link rel="stylesheet" href="/css/style.css" />
 </head>
 
 <body>
@@ -15,7 +16,7 @@
   {{> _navbar }}
 
   <div class="container">
-    {{{ body }}}
+    {{> _msg}} {{> _errors}} {{{ body }}}
   </div>
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 
