--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-3">
   <a class="navbar-brand" href="/">Vidjot</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
     aria-expanded="false" aria-label="Toggle navigation">
@@ -11,5 +11,25 @@
       </a>
       <a class="nav-item nav-link" href="/about">About</a>
     </div>
+    <ul class="navbar-nav ml-auto">
+      {{#if user}}
+      <li class="nav-item dropdown">
+        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="navbarDropdownMenuLink">Video Ideas</a>
+        <div class="dropdown-menu">
+          <a href="/ideas" class="dropdown-item">Ideas</a>
+          <a href="/ideas/add" class="dropdown-item">Add</a>
+          <a href="/users/logout" class="dropdown-item">Logout</a>
+        </div>
+      </li>
+      {{else}}
+      <li class="nav-item">
+        <a class="nav-item nav-link" href="/users/login">Login</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-item nav-link" href="/users/register">Register</a>
+      </li>
+
+      {{/if}}
+    </ul>
   </div>
 </nav>
